# bitepy

./: .gitignore  .gitmodules  404.html  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: build.yml  gh-pages.yml  release.yml
about/: index.html
bite/: __init__.py  _bite.cpp  data.py  heatmap.py  results.py  simulation.py
bitepy/: __init__.py  _bite.cpp  heatmap.py  results.py  simulation.py
data/: index.html
docs/: about.md  api.md  data.md  index.md  results.md  simulation.md
include/: BalancingOrder.h  ExecMarketOrder.h  ForeLogOrder.h  LimitOrder.h  LogAcceptedOrder.h  LogLimitOrder.h  Simulation.h  SimulationParameters.h
libs/: _bite.cp310-win_amd64.pyd  _bite.cp311-win_amd64.pyd  _bite.cp312-win_amd64.pyd  _bite.cp313-win_amd64.pyd  _bite.cp38-win_amd64.pyd  _bite.cp39-win_amd64.pyd  _bite_mac_py3.10.dylib  _bite_mac_py3.11.dylib  _bite_mac_py3.12.dylib  _bite_mac_py3.13.dylib  _bite_mac_py3.8.dylib  _bite_mac_py3.9.dylib  _bite_win_py3.10.lib  _bite_win_py3.11.lib  _bite_win_py3.12.lib  _bite_win_py3.13.lib  _bite_win_py3.8.lib  _bite_win_py3.9.lib
notebooks/: package_tutorial.ipynb
results/: index.html
search/: search_index.json
simulation/: index.html
