#[build-system]
#requires = [
#  "setuptools>=65",
#  "wheel",
#  "scikit-build",
#  "cmake>=3.15",
#  "pybind11[global]",
#  "ninja"
#]
#build-backend = "setuptools.build_meta"


[build-system]
requires = ["scikit-build", "pybind11>=2.6", "setuptools"] # Add other build deps
build-backend = "setuptools.build_meta" # Or appropriate backend

[tool.cibuildwheel]
# === Configure Python versions here ===
# Uses CPython identifiers (cp<major><minor>)
# Matches your original matrix comment: ["3.8"] #, "3.9", "3.10", "3.11", "3.12", "3.13"]
build = ["cp38-*"]
# To build for more versions uncomment/add them:
# build = ["cp38-*", "cp39-*", "cp310-*", "cp311-*", "cp312-*"]

skip = [] # Optionally skip specific builds e.g. "*-musllinux_*"

# Configure architectures
archs = ["auto"] # Or specific like ["x86_64", "aarch64"]

# Environment variables can also be set here instead of the workflow file
[tool.cibuildwheel.environment]
CMAKE_CXX_STANDARD = "17"
CMAKE_CXX_STANDARD_REQUIRED = "ON"
CMAKE_CXX_FLAGS = "-std=c++17"
BUILD_VERBOSE = "1"

# Example for Linux specific settings (optional)
# [tool.cibuildwheel.linux]
# environment = { ... } # Linux-specific env vars