[build-system]
requires = ["scikit-build", "pybind11[global]", "setuptools>=65", "ninja", "cmake>=3.15"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
# === Configure Python versions here ===
# Uses CPython identifiers (cp<major><minor>)
build = ["cp38-*", "cp39-*", "cp310-*", "cp311-*", "cp312-*", "cp313-*"]

skip = [] # Optionally skip specific builds e.g. "*-musllinux_*"

# Configure architectures
archs = ["auto"] # Or specific like ["x86_64", "aarch64"]

# Environment variables can also be set here instead of the workflow file
[tool.cibuildwheel.environment]
CMAKE_CXX_STANDARD = "17"
CMAKE_CXX_STANDARD_REQUIRED = "ON"
CMAKE_CXX_FLAGS = "-std=c++17"
BUILD_VERBOSE = "1"

# Example for Linux specific settings (optional)
# [tool.cibuildwheel.linux]
# environment = { ... } # Linux-specific env vars